[metadata]
# replace with your username:
name = sepsesam
version = 0.2.3
author = Benjamin Wegener
author_email = bwegner@ucc.ovgu.de
description = SEP Sesam Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wegenerbenjamin/sepsesam
project_urls =
    Bug Tracker = https://github.com/wegenerbenjamin/sepsesam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
