[metadata]
name = sepsesam
version = 0.5.3
author = SAP UCC Magdeburg
description = SEP Sesam Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SAPUCC/sepsesam
project_urls =
    Bug Tracker = https://github.com/SAPUCC/sepsesam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
